--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="de.datatrain.mietercockpitnative">
+        package="de.datatrain.mietercockpitnative">
 
     <application
             android:name=".MyApplication"
@@ -9,18 +9,18 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".TileActivity">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".BaseActivity"></activity>
+        <activity android:name=".TileActivity"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
-        <activity android:name=".onboarding.LoginActivity">
-        </activity>
-        <activity android:name=".onboarding.RegisterActivity">
-        </activity>
+        <activity android:name=".onboarding.LoginActivity"></activity>
+        <activity android:name=".onboarding.RegisterActivity"></activity>
         <activity android:name=".onboarding.LaunchActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
